# C-Study

./: .gitignore  CMakeLists.txt  C_Structure_Demo  C_Structure_Demo.c  Makefile  README.md
apps/01_preprocessor/: main.c
apps/02_student_mgr/: main.c
include/: student.h
src/: student.c
